@@ -426,6 +426,7 @@ void bind_torrent_handle()
         .def(self == self)
         .def(self != self)
         .def(self < self)
+        .def("__hash__", (std::size_t (*)(torrent_handle const&))&libtorrent::hash_value)
         .def("get_peer_info", get_peer_info)
         .def("status", _(&torrent_handle::status), arg("flags") = 0xffffffff)
         .def("get_download_queue", get_download_queue)
